src/parser/GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

	    import ast.type.*;
	    import ast.statement.*;
	    import ast.expression.*;
	    import ast.definition.*;
	    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, ID=40, INT_LITERAL=41, FLOAT_LITERAL=42, CHAR_LITERAL=43, LINE_COMMENT=44, 
		MULTILINE_COMMENT=45, WHITESPACE=46;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_varDefinition = 2, RULE_functionDefinition = 3, 
		RULE_structDefinition = 4, RULE_param = 5, RULE_statement = 6, RULE_expression = 7, 
		RULE_type = 8, RULE_struct_attributes = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "varDefinition", "functionDefinition", "structDefinition", 
			"param", "statement", "expression", "type", "struct_attributes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "';'", "'('", "')'", "'{'", "'}'", "'struct'", 
			"','", "'print'", "'printsp'", "'println'", "'return'", "'read'", "'='", 
			"'if'", "'else'", "'while'", "'do'", "'<'", "'>'", "'['", "']'", "'.'", 
			"'!'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<='", "'>='", "'=='", "'!='", 
			"'&&'", "'||'", "'int'", "'float'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "ID", "INT_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionContext definition;
		public List<DefinitionContext> defs = new ArrayList<DefinitionContext>();
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 1099511628034L) != 0) {
				{
				{
				setState(20);
				((ProgramContext)_localctx).definition = definition();
				((ProgramContext)_localctx).defs.add(((ProgramContext)_localctx).definition);
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(((ProgramContext)_localctx).defs); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public Definition ast;
		public VarDefinitionContext v;
		public StructDefinitionContext s;
		public FunctionDefinitionContext f;
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public StructDefinitionContext structDefinition() {
			return getRuleContext(StructDefinitionContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				((DefinitionContext)_localctx).v = varDefinition();
				 ((DefinitionContext)_localctx).ast =  ((DefinitionContext)_localctx).v.ast; 
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(32);
				((DefinitionContext)_localctx).s = structDefinition();
				 ((DefinitionContext)_localctx).ast =  ((DefinitionContext)_localctx).s.ast; 
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(35);
				((DefinitionContext)_localctx).f = functionDefinition();
				 ((DefinitionContext)_localctx).ast =  ((DefinitionContext)_localctx).f.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends ParserRuleContext {
		public VarDefinition ast;
		public Token i;
		public TypeContext t;
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			setState(41);
			((VarDefinitionContext)_localctx).i = match(ID);
			setState(42);
			match(T__1);
			setState(43);
			((VarDefinitionContext)_localctx).t = type();
			setState(44);
			match(T__2);
			 ((VarDefinitionContext)_localctx).ast =  new VarDefinition(((VarDefinitionContext)_localctx).i, ((VarDefinitionContext)_localctx).t.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token i;
		public ParamContext param;
		public List<ParamContext> p = new ArrayList<ParamContext>();
		public TypeContext t;
		public VarDefinitionContext varDefinition;
		public List<VarDefinitionContext> v = new ArrayList<VarDefinitionContext>();
		public StatementContext statement;
		public List<StatementContext> s = new ArrayList<StatementContext>();
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			((FunctionDefinitionContext)_localctx).i = match(ID);
			setState(48);
			match(T__3);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8 || _la==ID) {
				{
				{
				setState(49);
				((FunctionDefinitionContext)_localctx).param = param();
				((FunctionDefinitionContext)_localctx).p.add(((FunctionDefinitionContext)_localctx).param);
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			match(T__4);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(56);
				match(T__1);
				setState(57);
				((FunctionDefinitionContext)_localctx).t = type();
				}
			}

			setState(60);
			match(T__5);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(61);
				((FunctionDefinitionContext)_localctx).varDefinition = varDefinition();
				((FunctionDefinitionContext)_localctx).v.add(((FunctionDefinitionContext)_localctx).varDefinition);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709903376L) != 0) {
				{
				{
				setState(67);
				((FunctionDefinitionContext)_localctx).statement = statement();
				((FunctionDefinitionContext)_localctx).s.add(((FunctionDefinitionContext)_localctx).statement);
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__6);
			 ((FunctionDefinitionContext)_localctx).ast =  new FunctionDefinition(((FunctionDefinitionContext)_localctx).i, ((FunctionDefinitionContext)_localctx).p, (((FunctionDefinitionContext)_localctx).t == null) ? new VoidType() : ((FunctionDefinitionContext)_localctx).t.ast, ((FunctionDefinitionContext)_localctx).v, ((FunctionDefinitionContext)_localctx).s); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDefinitionContext extends ParserRuleContext {
		public StructDefinition ast;
		public Token i;
		public Struct_attributesContext sa;
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public Struct_attributesContext struct_attributes() {
			return getRuleContext(Struct_attributesContext.class,0);
		}
		public StructDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDefinition; }
	}

	public final StructDefinitionContext structDefinition() throws RecognitionException {
		StructDefinitionContext _localctx = new StructDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__7);
			setState(77);
			((StructDefinitionContext)_localctx).i = match(ID);
			setState(78);
			match(T__5);
			setState(79);
			((StructDefinitionContext)_localctx).sa = struct_attributes();
			setState(80);
			match(T__6);
			 ((StructDefinitionContext)_localctx).ast =  new StructDefinition(((StructDefinitionContext)_localctx).i, ((StructDefinitionContext)_localctx).sa.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public VarDefinition ast;
		public Token i;
		public TypeContext t;
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(83);
				match(T__8);
				}
			}

			setState(86);
			((ParamContext)_localctx).i = match(ID);
			setState(87);
			match(T__1);
			setState(88);
			((ParamContext)_localctx).t = type();
			 ((ParamContext)_localctx).ast =  new VarDefinition(((ParamContext)_localctx).i, ((ParamContext)_localctx).t.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Statement ast;
		public Token i;
		public ExpressionContext expression;
		public List<ExpressionContext> args = new ArrayList<ExpressionContext>();
		public List<ExpressionContext> e = new ArrayList<ExpressionContext>();
		public ExpressionContext e1;
		public ExpressionContext e2;
		public StatementContext statement;
		public List<StatementContext> s1 = new ArrayList<StatementContext>();
		public List<StatementContext> s2 = new ArrayList<StatementContext>();
		public List<StatementContext> s = new ArrayList<StatementContext>();
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		int _la;
		try {
			setState(217);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				((StatementContext)_localctx).i = match(ID);
				setState(92);
				match(T__3);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709019664L) != 0) {
					{
					setState(93);
					((StatementContext)_localctx).expression = expression(0);
					((StatementContext)_localctx).args.add(((StatementContext)_localctx).expression);
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__8) {
						{
						{
						setState(94);
						match(T__8);
						setState(95);
						((StatementContext)_localctx).expression = expression(0);
						((StatementContext)_localctx).args.add(((StatementContext)_localctx).expression);
						}
						}
						setState(100);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(103);
				match(T__4);
				setState(104);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new FunctionCallS(((StatementContext)_localctx).i, ((StatementContext)_localctx).args); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(T__9);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709019664L) != 0) {
					{
					setState(107);
					((StatementContext)_localctx).expression = expression(0);
					((StatementContext)_localctx).e.add(((StatementContext)_localctx).expression);
					}
				}

				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(110);
					match(T__8);
					setState(111);
					((StatementContext)_localctx).expression = expression(0);
					((StatementContext)_localctx).e.add(((StatementContext)_localctx).expression);
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new Print(((StatementContext)_localctx).e); _localctx.ast.updatePositions(_localctx.start); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(T__10);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709019664L) != 0) {
					{
					setState(120);
					((StatementContext)_localctx).expression = expression(0);
					((StatementContext)_localctx).e.add(((StatementContext)_localctx).expression);
					}
				}

				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(123);
					match(T__8);
					setState(124);
					((StatementContext)_localctx).expression = expression(0);
					((StatementContext)_localctx).e.add(((StatementContext)_localctx).expression);
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(130);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new Printsp(((StatementContext)_localctx).e); _localctx.ast.updatePositions(_localctx.start); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				match(T__11);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709019664L) != 0) {
					{
					setState(133);
					((StatementContext)_localctx).expression = expression(0);
					((StatementContext)_localctx).e.add(((StatementContext)_localctx).expression);
					}
				}

				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(136);
					match(T__8);
					setState(137);
					((StatementContext)_localctx).expression = expression(0);
					((StatementContext)_localctx).e.add(((StatementContext)_localctx).expression);
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new Println(((StatementContext)_localctx).e); _localctx.ast.updatePositions(_localctx.start); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(145);
				match(T__12);
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709019664L) != 0) {
					{
					setState(146);
					((StatementContext)_localctx).expression = expression(0);
					}
				}

				setState(149);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new Return((((StatementContext)_localctx).expression == null) ? null : ((StatementContext)_localctx).expression.ast); _localctx.ast.updatePositions(_localctx.start); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				match(T__13);
				setState(152);
				((StatementContext)_localctx).expression = expression(0);
				setState(153);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new Read(((StatementContext)_localctx).expression.ast); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(156);
				((StatementContext)_localctx).e1 = expression(0);
				setState(157);
				match(T__14);
				setState(158);
				((StatementContext)_localctx).e2 = expression(0);
				setState(159);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new Assignment(((StatementContext)_localctx).e1.ast, ((StatementContext)_localctx).e2.ast); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(162);
				match(T__15);
				setState(163);
				match(T__3);
				setState(164);
				((StatementContext)_localctx).expression = expression(0);
				setState(165);
				match(T__4);
				setState(166);
				match(T__5);
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709903376L) != 0) {
					{
					{
					setState(167);
					((StatementContext)_localctx).statement = statement();
					((StatementContext)_localctx).s1.add(((StatementContext)_localctx).statement);
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(173);
				match(T__6);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16) {
					{
					setState(174);
					match(T__16);
					setState(175);
					match(T__5);
					setState(179);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709903376L) != 0) {
						{
						{
						setState(176);
						((StatementContext)_localctx).statement = statement();
						((StatementContext)_localctx).s2.add(((StatementContext)_localctx).statement);
						}
						}
						setState(181);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(182);
					match(T__6);
					}
				}

				 ((StatementContext)_localctx).ast =  new If(((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).s1, ((StatementContext)_localctx).s2); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(187);
				match(T__17);
				setState(188);
				match(T__3);
				setState(189);
				((StatementContext)_localctx).expression = expression(0);
				setState(190);
				match(T__4);
				setState(191);
				match(T__5);
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709903376L) != 0) {
					{
					{
					setState(192);
					((StatementContext)_localctx).statement = statement();
					((StatementContext)_localctx).s.add(((StatementContext)_localctx).statement);
					}
					}
					setState(197);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(198);
				match(T__6);
				 ((StatementContext)_localctx).ast =  new While(((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).s); 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(201);
				match(T__18);
				setState(202);
				match(T__5);
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492709903376L) != 0) {
					{
					{
					setState(203);
					((StatementContext)_localctx).statement = statement();
					((StatementContext)_localctx).s.add(((StatementContext)_localctx).statement);
					}
					}
					setState(208);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(209);
				match(T__6);
				setState(210);
				match(T__17);
				setState(211);
				match(T__3);
				setState(212);
				((StatementContext)_localctx).expression = expression(0);
				setState(213);
				match(T__4);
				setState(214);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new DoWhile(((StatementContext)_localctx).s, ((StatementContext)_localctx).expression.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expression ast;
		public ExpressionContext e1;
		public ExpressionContext e;
		public Token i;
		public ExpressionContext expression;
		public List<ExpressionContext> args = new ArrayList<ExpressionContext>();
		public TypeContext t;
		public Token INT_LITERAL;
		public Token FLOAT_LITERAL;
		public Token CHAR_LITERAL;
		public Token op;
		public ExpressionContext e2;
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT_LITERAL() { return getToken(GrammarParser.INT_LITERAL, 0); }
		public TerminalNode FLOAT_LITERAL() { return getToken(GrammarParser.FLOAT_LITERAL, 0); }
		public TerminalNode CHAR_LITERAL() { return getToken(GrammarParser.CHAR_LITERAL, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}
